--- a/index.html
+++ b/index.html
@@ -1,164 +1,198 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html 5>
+<html lang="en">
+
 <head>
-  <title>House Store</title>
-  <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Creepster" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Joseph_Chan</title>
 </head>
+
 <body>
-  <!-- Header -->
-  <header>
-    <div class="image-container logo-small">
-      <img src="https://content.codecademy.com/courses/freelance-1/unit-6/logo-sm.png">
-    </div>
-    <div class="image-container logo-big">
-      <img src="https://content.codecademy.com/courses/freelance-1/unit-6/logo-lg.png">
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#">Tools</a></li>
-        <li><a href="#">Lumber</a></li>
-        <li><a href="#">Paint</a></li>
-        <li><a href="#">Garden</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- Banner -->
-  <div id="banner">
-    <h1>PAINTING IS SCARY</h1>
-    <p>But it doesn't have to be! Let our handy Virtual Paint Department help guide you through the process of choosing a color. Know the hue? You know what to do. Click the order button and we'll get the paint to you.</p>
-  </div>
-
-  <!-- Color Guide -->
-  <div id="color-guide">
-    <div class="introduction">
-      <h2>Color Guide</h2>
-      <p>Here at HouseStore, we take color seriously. In each of the following sections, well explore our base colors in swatches that incrementally change three values: <strong>Hue</strong>, <strong>Saturation</strong> and <strong>Lightness</strong>. You'll be able to pick from a wide variety of colors that all work well with each other because they <strong>stem from the same value.</strong></p>
+    <div class="main-container">
+        <div id="logogrp">
+            <img class="logo" src="./capstone_colmar_assets/images/ic-logo.svg">
+            <div class="text"><span style=font-weight:bold;>COLMAR</span><span style="color: gray;">ACADEMY</span></div>
+        </div>
+        <div id="bargrp">
+            <div class="Navigation-Bar">
+                <div class="link">On campus</div>
+                <div class="link">Oline</div>
+                <div class="link">For companies</div>
+                <div class="link">Sign in</div>
+            </div>
+        </div>
     </div>
 
-    <!-- Red Swatches -->
-    <div class="color reds">
-      <div class="information">
-        <h3>Reds</h3>
-        <p>Firetrucks, lipstick, fresh berries &mdash; red is a color with power, emotion, intensity. For this reason we recommend using reds as accent colors. Red is particularly suited to kitchens, as it is said to evoke hunger!</p><p>Our base red is <span class="base-color">HSL (350, 100, 50)</span></p>
-        <div class="image-container">
-          <img src="	https://content.codecademy.com/courses/freelance-1/unit-6/reds.png">
+    <div class="frist-bar">
+        <div id="frist-bar-img">
+            <img src="capstone_colmar_assets/images/banner.jpg">
         </div>
-      </div>
-      <div class="swatches">
-        <h4>Lightness</h4>
-        <div class="swatch lightness">
-          <div class="color-1"></div>
-          <div class="color-2"></div>
-          <div class="color-3"></div>
-          <div class="color-4"></div>
-          <div class="color-5"></div>
+        <div class="frist-bar-text">
+            <h1>Learn something new everyday </h1>
+            <h4>Lorem ipsum dolor sit amet,
+                <p>consectetur adipiscing elit</p>
+            </h4>
+            <span class="button">Start here<span>
         </div>
-        <h4>Saturation</h4>
-        <div class="swatch saturation">
-          <div class="color-1"></div>
-          <div class="color-2"></div>
-          <div class="color-3"></div>
-          <div class="color-4"></div>
-          <div class="color-5"></div>
-        </div>
-        <h4>Hue</h4>
-        <div class="swatch hue">
-          <div class="color-1"></div>
-          <div class="color-2"></div>
-          <div class="color-3"></div>
-          <div class="color-4"></div>
-          <div class="color-5"></div>
-        </div>
-      </div>
-    </div>
+     </div>
 
-    <!-- Green Swatches -->
-    <div class="color greens">
-      <div class="information">
-        <h3>Greens</h3>
-        <p>They say that geniuses choose green &mdash; we think any of these verdant colors will look smart! Deck your halls like a lush outdoor space, adorn your rooms with emerald, or just make your houseguests green with envy!</p>
-        <p>Our base green is <span class="base-color">HSL (130, 100, 50)</span></p>
-        <div class="image-container">
-          <img src="	https://content.codecademy.com/courses/freelance-1/unit-6/greens.png">
-        </div>
-      </div>
-      <div class="swatches">
-        <h4>Lightness</h4>
-        <div class="swatch lightness">
-          <div class="color-1"></div>
-          <div class="color-2"></div>
-          <div class="color-3"></div>
-          <div class="color-4"></div>
-          <div class="color-5"></div>
-        </div>
-        <h4>Saturation</h4>
-        <div class="swatch saturation">
-          <div class="color-1"></div>
-          <div class="color-2"></div>
-          <div class="color-3"></div>
-          <div class="color-4"></div>
-          <div class="color-5"></div>
-        </div>
-        <h4>Hue</h4>
-        <div class="swatch hue">
-          <div class="color-1"></div>
-          <div class="color-2"></div>
-          <div class="color-3"></div>
-          <div class="color-4"></div>
-          <div class="color-5"></div>
-        </div>
-      </div>
-    </div>
+     <div class="three-bar">
+        <figure id="three-bar-img">
+            <img src="capstone_colmar_assets/images/information-main.jpg">
+            <h1>It doesn't hurt to keep practicing</h1>
+            <h4>"Curabitur vitea libero in ipsum porttitor consequat. Aliquam et commodo lectus,nec consequat neque. Sed non accumasn urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique liguala."</h4>
+            <h4>Emanuel, Sr Strategist at Hiring.com</h4>
+        </figure>
+        
+        <div class="box-photo">
+            <div class="box">
+                <div class="figure" >
+                    <img class="dst" src="capstone_colmar_assets/images/information-orientation.jpg">
+                </div>
 
-    <!-- Blue Swatches -->
-    <div class="color blues">
-      <div class="information">
-        <h3>Blues</h3>
-        <p>Blues dont give us the blues &mdash; in fact, blue is one of the most popular colors in home interiors, and for good reason! Energizing like a summer sky, calming like a lakeshore, light as mist or deep as indigo, blue can do it all.</p>
-        <p>Our base blue is <span class="base-color">HSL (220, 100, 50)</span></p>
-        <div class="image-container">
-          <img src="	https://content.codecademy.com/courses/freelance-1/unit-6/blues.png">
-        </div>
-      </div>
-      <div class="swatches">
-        <h4>Lightness</h4>
-        <div class="swatch lightness">
-          <div class="color-1"></div>
-          <div class="color-2"></div>
-          <div class="color-3"></div>
-          <div class="color-4"></div>
-          <div class="color-5"></div>
-        </div>
-        <h4>Saturation</h4>
-        <div class="swatch saturation">
-          <div class="color-1"></div>
-          <div class="color-2"></div>
-          <div class="color-3"></div>
-          <div class="color-4"></div>
-          <div class="color-5"></div>
-        </div>
-        <h4>Hue</h4>
-        <div class="swatch hue">
-          <div class="color-1"></div>
-          <div class="color-2"></div>
-          <div class="color-3"></div>
-          <div class="color-4"></div>
-          <div class="color-5"></div>
-        </div>
-      </div>
-    </div>
-  </div>
+             <div class="box-text">
+                    <h2>Orientation date</h2>
+                    <h5>Tue 10/11 & Wed 10/12: 8am-3pm</h5>
+                    <h5>Read more</h5>
+                </div>
+            </div>
 
-  <!-- Footer -->
-  <footer>
-    <strong>All set? Click below to order.</strong>
-    <p>Most colors can be delivered to your door within 48 hours. We'll reach out if your color needs some extra attention, which could delay shipment.</p>
-    <a href="#" class="button">Order My Paint</a>
-  </footer>
+            <div class="box">
+                <div class="figure">
+                    <img class="dst" src="capstone_colmar_assets/images/information-campus.jpg" alt="">
+                </div>
+
+                <div class="bx-text">
+                    <h2>Our campus</h2>
+                    <h5>Find which campus is close by you</h5>
+                    <h5>Read more</h5>
+                </div>
+            </div>
+
+            <div class="box" style="background-color: gray;">
+                <div class="figure">
+                    <img class="dst" src="capstone_colmar_assets/images/information-guest-lecture.jpg" alt="">
+                </div>
+
+                <div class="bx-text">
+                    <h2>Our guest lecture </h2>
+                    <h5>Join a keynote with Oliver Sack about music in medical treatment</h5>
+                    <h5>Read more</h5>
+                </div>
+            </div>
+        </div>
+     </div>
+
+     <section class="four-bar">
+            <h3 style="margin: 32px 0px;">Start learning</h3>
+            <div class="photo-box">
+                <div class="box-img-01">
+                    <div class="dst">
+                        <img src="./capstone_colmar_assets/images/course-software.jpg">
+                    </div>
+                    <h3>Software engineering</h3>
+                    <p class="courses">courses</p>
+                    <p class="classes">web development, mobile development, iOT, APIs</p>
+                </div>
+                <div class="box-img-01">
+                    <div class="dst">
+                        <img src="./capstone_colmar_assets/images/course-computer-art.jpg">
+                    </div>
+                    <h3>Computer art</h3>
+                    <p class="courses">courses</p>
+                    <p class="classes">imaging &amp; design, web design, 
+                        motion graphics &amp; visual effects, computer animation</p>
+                </div>
+                <div class="box-img-01">
+                    <div class="dst">
+                        <img src="./capstone_colmar_assets/images/course-design.jpg">
+                    </div>
+                    <h3>Design</h3>
+                    <p class="courses">courses</p>
+                    <p class="classes">user experience design, user research, visual design</p>
+                </div>
+                <div class="box-img-01">
+                    <div class="dst">
+                        <img src="./capstone_colmar_assets/images/course-data.jpg">
+                    </div>
+                    <h3>Data</h3>
+                    <p class="courses">courses</p>
+                    <p class="classes">data science, big data, SQL, data visualization</p>
+                </div>
+                <div class="box-img-01">
+                    <div class="dst">
+                        <img src="./capstone_colmar_assets/images/course-business.jpg">
+                    </div>
+                    <h3>Business</h3>
+                    <p class="courses">courses</p>
+                    <p class="classes">product development, business development, startup</p>
+                </div> 
+                <div class="box-img-01">
+                    <div class="dst">
+                        <img src="./capstone_colmar_assets/images/course-marketing.jpg">
+                    </div>
+                    <h3>Marketing</h3>
+                    <p class="courses">courses</p>
+                    <p class="classes">Analytics, content marketing, mobile marketing</p>
+                </div>
+            </div>
+     </section>
+
+     <div class="five-bar-text">
+         <h2>Thesis exhibit</h2>
+        </div>
+     <section class="five-bar">
+        <div class="exhibit">
+            <div class="left">
+                <video controls>
+                    <source src="./capstone_colmar_assets/videos/thesis.mp4" type="video/mp4">
+                </video>
+                <h3 class="dst">Reimagine urban</h3>
+                <p class="text-01">"Curabitur vitae libero in ipsum porttitor consequat.
+                    Aliquam et commodo lectus, nec consequat neque.
+                    Sed non accumsan urna.
+                    Phasellus sed consequat ex.
+                    Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
+                </p>
+            </div>
+            <div class="right-photo">
+                <div class="box-bg-color">
+                    <div class="figure">
+                        <img class="dst" src="./capstone_colmar_assets/images/thesis-fisma.jpg">
+                    </div>
+                    <div class="text-02">
+                        <h3>Fisma: Design and Prototype</h3>
+                        <p>Designer showcase of new prototype product</p>
+                    </div>
+                </div>
+                <div class="box-01">
+                    <div class="figure">
+                        <img class="dst" src="./capstone_colmar_assets/images/thesis-now-and-then.jpg">
+                    </div>
+                    <div class="text-02">
+                        <h3>Now and then</h3>
+                        <p>Research study about New York</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
+     </div>
+     <footer>
+        <span>© Colmar Academy. All rights reserved</span>
+            <nav>
+                <ul class="desktop">
+                    <li>
+                        <a>Terms</a>
+                    </li>
+                    <li>
+                        <a>Privacy</a>
+                    </li>
+                </ul>
+            </nav>
+            </footer>
 </body>
+
 </html>
