--- a/index.html
+++ b/index.html
@@ -1,198 +1,98 @@
-<!DOCTYPE html 5>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Joseph_Chan</title>
+    <title>Joseph Chan</title>
+    <link href="./img/bear_logo.png" rel="icon">
+    <link href="./index.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="main-container">
-        <div id="logogrp">
-            <img class="logo" src="./capstone_colmar_assets/images/ic-logo.svg">
-            <div class="text"><span style=font-weight:bold;>COLMAR</span><span style="color: gray;">ACADEMY</span></div>
+    <header class="bar">
+        <img class="img_logo" src="./img/bear_logo.png" alt="logo">
+        <div class="topbar">
+            <a href=" ">Home</a>
+            <a href=" ">About</a>
+            <a href=" ">Skills</a>
+            <a href=" ">Project</a>
+            <a href=" ">Contact</a>
         </div>
-        <div id="bargrp">
-            <div class="Navigation-Bar">
-                <div class="link">On campus</div>
-                <div class="link">Oline</div>
-                <div class="link">For companies</div>
-                <div class="link">Sign in</div>
+    </header>
+
+    <div class="Home">
+        <div class="Hometext">
+            <h2>Hello There!</h2>
+            <h1 class="motion_name">Hi! I'M JOSEPH CHAN</h1>
+            <h4>Hello, I am a Multimedia Designer &<br> Front-end Web Developer</h4>
+        </div>
+        <img src="./img/About_Me.svg" alt="">
+    </div>
+
+    <div class="About_Me">
+        <h1>About Me</h1>
+        <div class="AM">
+            <div class="About_img_Box">
+                <img class="About_img" src="./img/IMG_9672.png" alt="">
+            </div>
+            <div class="About_text">
+                <h1>I'm Joseph Chan</h1>
+                <h4>Hello, I am a Multimedia Designer &<br> Front-end Web Developer</h4>
+                <p>An optimistic multimedia designer with nearly two years <br> experience in exhibition and event design. <br>Looking for a challenging role in a reputable organization <br> to utilize my IT technical, Design skills for the growth of the
+                    <br> organization as well as to enhance my knowledge about new <br>and emerging trends in the IT sector.</p>
             </div>
         </div>
     </div>
 
-    <div class="frist-bar">
-        <div id="frist-bar-img">
-            <img src="capstone_colmar_assets/images/banner.jpg">
-        </div>
-        <div class="frist-bar-text">
-            <h1>Learn something new everyday </h1>
-            <h4>Lorem ipsum dolor sit amet,
-                <p>consectetur adipiscing elit</p>
-            </h4>
-            <span class="button">Start here<span>
-        </div>
-     </div>
-
-     <div class="three-bar">
-        <figure id="three-bar-img">
-            <img src="capstone_colmar_assets/images/information-main.jpg">
-            <h1>It doesn't hurt to keep practicing</h1>
-            <h4>"Curabitur vitea libero in ipsum porttitor consequat. Aliquam et commodo lectus,nec consequat neque. Sed non accumasn urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique liguala."</h4>
-            <h4>Emanuel, Sr Strategist at Hiring.com</h4>
-        </figure>
-        
-        <div class="box-photo">
-            <div class="box">
-                <div class="figure" >
-                    <img class="dst" src="capstone_colmar_assets/images/information-orientation.jpg">
-                </div>
-
-             <div class="box-text">
-                    <h2>Orientation date</h2>
-                    <h5>Tue 10/11 & Wed 10/12: 8am-3pm</h5>
-                    <h5>Read more</h5>
+    <div class="My_Skills">
+        <h1>MYSKILLLS</h1>
+        <div class="Skills_Area">
+            <div class="FED">
+                <img src="./img/Web Icon.svg" alt="">
+                <h4>Front-end Web Developer</h4>
+                <div class="FED_icons">
+                    <img src="./img/FED/html-5.svg" alt="">
+                    <img src="./img/FED/CSS.svg" alt="">
+                    <img src="./img/FED/JS.svg" alt="">
+                    <img src="./img/FED/react.svg" alt="">
                 </div>
             </div>
-
-            <div class="box">
-                <div class="figure">
-                    <img class="dst" src="capstone_colmar_assets/images/information-campus.jpg" alt="">
-                </div>
-
-                <div class="bx-text">
-                    <h2>Our campus</h2>
-                    <h5>Find which campus is close by you</h5>
-                    <h5>Read more</h5>
-                </div>
-            </div>
-
-            <div class="box" style="background-color: gray;">
-                <div class="figure">
-                    <img class="dst" src="capstone_colmar_assets/images/information-guest-lecture.jpg" alt="">
-                </div>
-
-                <div class="bx-text">
-                    <h2>Our guest lecture </h2>
-                    <h5>Join a keynote with Oliver Sack about music in medical treatment</h5>
-                    <h5>Read more</h5>
+            <div class="MM">
+                <img src="./img/MM_icon.svg" alt="">
+                <h4>Multimedia</h4>
+                <div class="MM_icons">
+                    <img class="icons" src="./img/MM/photoshop.svg" alt="">
+                    <img class="icons" src="./img/MM/illustrator.svg" alt="">
+                    <img class="icons" src="./img/MM/Premiere.svg" alt="">
+                    <img class="icons" src="./img/MM/aftereffects.svg" alt="">
+                    <img class="icons" src="./img/MM/Final Cut Pro X.png" alt="">
+                    <img class="icons" src="./img/MM/3ds-max.svg" alt="">
+                    <img class="icons" src="./img/MM/autocad.svg" alt="">
                 </div>
             </div>
         </div>
-     </div>
 
-     <section class="four-bar">
-            <h3 style="margin: 32px 0px;">Start learning</h3>
-            <div class="photo-box">
-                <div class="box-img-01">
-                    <div class="dst">
-                        <img src="./capstone_colmar_assets/images/course-software.jpg">
-                    </div>
-                    <h3>Software engineering</h3>
-                    <p class="courses">courses</p>
-                    <p class="classes">web development, mobile development, iOT, APIs</p>
-                </div>
-                <div class="box-img-01">
-                    <div class="dst">
-                        <img src="./capstone_colmar_assets/images/course-computer-art.jpg">
-                    </div>
-                    <h3>Computer art</h3>
-                    <p class="courses">courses</p>
-                    <p class="classes">imaging &amp; design, web design, 
-                        motion graphics &amp; visual effects, computer animation</p>
-                </div>
-                <div class="box-img-01">
-                    <div class="dst">
-                        <img src="./capstone_colmar_assets/images/course-design.jpg">
-                    </div>
-                    <h3>Design</h3>
-                    <p class="courses">courses</p>
-                    <p class="classes">user experience design, user research, visual design</p>
-                </div>
-                <div class="box-img-01">
-                    <div class="dst">
-                        <img src="./capstone_colmar_assets/images/course-data.jpg">
-                    </div>
-                    <h3>Data</h3>
-                    <p class="courses">courses</p>
-                    <p class="classes">data science, big data, SQL, data visualization</p>
-                </div>
-                <div class="box-img-01">
-                    <div class="dst">
-                        <img src="./capstone_colmar_assets/images/course-business.jpg">
-                    </div>
-                    <h3>Business</h3>
-                    <p class="courses">courses</p>
-                    <p class="classes">product development, business development, startup</p>
-                </div> 
-                <div class="box-img-01">
-                    <div class="dst">
-                        <img src="./capstone_colmar_assets/images/course-marketing.jpg">
-                    </div>
-                    <h3>Marketing</h3>
-                    <p class="courses">courses</p>
-                    <p class="classes">Analytics, content marketing, mobile marketing</p>
-                </div>
-            </div>
-     </section>
+    </div>
 
-     <div class="five-bar-text">
-         <h2>Thesis exhibit</h2>
-        </div>
-     <section class="five-bar">
-        <div class="exhibit">
-            <div class="left">
-                <video controls>
-                    <source src="./capstone_colmar_assets/videos/thesis.mp4" type="video/mp4">
-                </video>
-                <h3 class="dst">Reimagine urban</h3>
-                <p class="text-01">"Curabitur vitae libero in ipsum porttitor consequat.
-                    Aliquam et commodo lectus, nec consequat neque.
-                    Sed non accumsan urna.
-                    Phasellus sed consequat ex.
-                    Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
-                </p>
+    <div class="portfolio">
+        <h1>MY PORTFOLIO</h1>
+        <div class="project">
+            <div class="todolist" onclick="location.href='./Joseph_Portfolio/GENJVK.github.io/public/index.html'" ;>
+                <img src="./img/bear_logo.png" alt="">
+                <p>To Do List</p>
             </div>
-            <div class="right-photo">
-                <div class="box-bg-color">
-                    <div class="figure">
-                        <img class="dst" src="./capstone_colmar_assets/images/thesis-fisma.jpg">
-                    </div>
-                    <div class="text-02">
-                        <h3>Fisma: Design and Prototype</h3>
-                        <p>Designer showcase of new prototype product</p>
-                    </div>
-                </div>
-                <div class="box-01">
-                    <div class="figure">
-                        <img class="dst" src="./capstone_colmar_assets/images/thesis-now-and-then.jpg">
-                    </div>
-                    <div class="text-02">
-                        <h3>Now and then</h3>
-                        <p>Research study about New York</p>
-                    </div>
-                </div>
+            <div class="todolist" onclick="location.href='./Joseph_Portfolio/GENJVK.github.io/public/login.html'" ;>
+                <img src="./img/bear_logo.png" alt="">
+                <p>Login</p>
             </div>
         </div>
-     </section>
-     </div>
-     <footer>
-        <span>© Colmar Academy. All rights reserved</span>
-            <nav>
-                <ul class="desktop">
-                    <li>
-                        <a>Terms</a>
-                    </li>
-                    <li>
-                        <a>Privacy</a>
-                    </li>
-                </ul>
-            </nav>
-            </footer>
+    </div>
+
 </body>
 
 </html>
