--- a/index.html
+++ b/index.html
@@ -6,16 +6,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joseph Chan</title>
+    <link href="./img/bear_logo.png" rel="icon">
     <link href="./index.css" rel="stylesheet">
-    <link>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="halo">
-        <h1>Hi! I'm Joseph Chan</h1>
+    <header class="bar">
+        <img class="img_logo" src="./img/bear_logo.png" alt="logo">
+        <div class="topbar">
+            <a href=" ">Home</a>
+            <a href=" ">About</a>
+            <a href=" ">Skills</a>
+            <a href=" ">Project</a>
+            <a href=" ">Contact</a>
+        </div>
+    </header>
 
+    <div class="Home">
+        <div class="Hometext">
+            <h2>Hello There!</h2>
+            <h1 class="motion_name">Hi! I'M JOSEPH CHAN</h1>
+            <h4>Hello, I am a Multimedia Designer &<br> Front-end Web Developer</h4>
+        </div>
+        <img src="./img/About_Me.svg" alt="">
+    </div>
+
+    <div class="About_Me">
+        <h1>About Me</h1>
+        <div class="AM">
+            <div class="About_img_Box">
+                <img class="About_img" src="./img/IMG_9672.png" alt="">
+            </div>
+            <div class="About_text">
+                <h1>I'm Joseph Chan</h1>
+                <h4>Hello, I am a Multimedia Designer &<br> Front-end Web Developer</h4>
+                <p>An optimistic multimedia designer with nearly two years <br> experience in exhibition and event design. <br>Looking for a challenging role in a reputable organization <br> to utilize my IT technical, Design skills for the growth of the
+                    <br> organization as well as to enhance my knowledge about new <br>and emerging trends in the IT sector.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="My_Skills">
+        <h1>MYSKILLLS</h1>
+        <div class="Skills_Area">
+            <div class="FED">
+                <img src="./img/Web Icon.svg" alt="">
+                <h4>Front-end Web Developer</h4>
+                <div class="FED_icons">
+                    <img src="./img/FED/html-5.svg" alt="">
+                    <img src="./img/FED/CSS.svg" alt="">
+                    <img src="./img/FED/JS.svg" alt="">
+                    <img src="./img/FED/react.svg" alt="">
+                </div>
+            </div>
+            <div class="MM">
+                <img src="./img/MM_icon.svg" alt="">
+                <h4>Multimedia</h4>
+                <div class="MM_icons">
+                    <img class="icons" src="./img/MM/photoshop.svg" alt="">
+                    <img class="icons" src="./img/MM/illustrator.svg" alt="">
+                    <img class="icons" src="./img/MM/Premiere.svg" alt="">
+                    <img class="icons" src="./img/MM/aftereffects.svg" alt="">
+                    <img class="icons" src="./img/MM/Final Cut Pro X.png" alt="">
+                    <img class="icons" src="./img/MM/3ds-max.svg" alt="">
+                    <img class="icons" src="./img/MM/autocad.svg" alt="">
+                </div>
+            </div>
+        </div>
 
     </div>
+
+    <div class="portfolio">
+        <h1>MY PORTFOLIO</h1>
+        <div class="project">
+            <div class="todolist" onclick="location.href='./Joseph_Portfolio/GENJVK.github.io/public/index.html'" ;>
+                <img src="./img/bear_logo.png" alt="">
+                <p>To Do List</p>
+            </div>
+            <div class="todolist" onclick="location.href='./Joseph_Portfolio/GENJVK.github.io/public/login.html'" ;>
+                <img src="./img/bear_logo.png" alt="">
+                <p>Login</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
