--- a/sam.html
+++ b/sam.html
@@ -2,55 +2,18 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Joseph Chan</title>
+    <link href="./img/bear_logo.png" rel="icon">
+    <link href="./sam.css" rel="stylesheet">
 </head>
 
 <body>
-
-    <button type="button" id="showHidden">点击切换div的隐藏与显示</button>
-
-    <div id="div1" style="display:block">请叫我第一层</div>
-
-    <div id="div2" style="display:none">请叫我第二层</div>
-
-    <script type='text/javascript'>
-        function show_hidden(obj) {
-
-            　　
-            if (obj.style.display == 'block') {
-
-                　　
-                obj.style.display = 'none';
-
-                　　
-            } else {
-
-                　　　　　
-                obj.style.display = 'block';
-
-                　　
-            }
-
-        }
-
-        var sh = document.getElementById("showHidden");
-
-        sh.onclick = function() {
-
-            var div1 = document.getElementById("div1");
-
-            var div2 = document.getElementById("div2");
-
-            show_hidden(div1);
-
-            show_hidden(div2);
-
-            return false;
-
-        }
-    </script>
-
+    <input type="checkbox" class="toggle">
+    <div class="inner">
+    </div>
 </body>
 
 </html>
