--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 <span>Hello! I'm</span>
                 <div class="dropping-texts">
                     <div>&nbsp Joseph Chan</div>
-                    <div>&nbsp Assistant Designerr</div>
+                    <div>&nbsp Assistant Designer</div>
                     <div>&nbsp Junior Front-end Web Developer</div>
                 </div>
             </div>
-            <h4>Hello, I am a Assistant Designerr & Junior Front-end Web Developer</h4>
+            <h4>Hello, I am a Assistant Designer & Junior Front-end Web Developer</h4>
         </div>
         <img src="./img/About_Me.svg" alt="">
     </div>
